Fixed altauthmethods size overflow, cleaned up a bit

--- a/docroot/css/site.css
+++ b/docroot/css/site.css
@@ -174,7 +174,6 @@ img { border:0px; }
 #loginbuttonsdiv { padding:20px; }
 #loginbuttonsdiv button { margin:0px 20px; }
 #forgotpassdiv { text-align:center; }
-#altauthinstrdiv { padding:0px 20px 10px 0px; }
 #altauthmethods { padding:0px 0px 20px 30px; }
 .liflab { font-size:medium; font-weight:normal; padding:10px; }
 .liflabtd { height:30px; }
